corrigindo a referencia da localizacao dos arquivos

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
     <!-- Template do Bootstrap utilizado para esse projeto -->
     <link rel="canonical" href="https://getbootstrap.com/docs/4.5/examples/carousel/">
-    <link href="/PA/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/PA/css/carousel.css" rel="stylesheet">
+    <link href="/projetoihcacess/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/projetoihcacess/css/carousel.css" rel="stylesheet">
 
   </head>
   <body>
@@ -59,7 +59,7 @@
     <div class="carousel-inner">
 
       <div class="carousel-item active">
-        <img src="/PA/img/ifpr.jpg" alt="Entrada IFPR Campus Palmas" width=60 height=40>
+        <img src="/projetoihcacess/img/ifpr.jpg" alt="Entrada IFPR Campus Palmas" width=60 height=40>
       </div>
 
       <!-- Descrição e Resumo do Trabalho -->
@@ -222,30 +222,30 @@
       </div>
       <div class="col-md-12">
        <video controls poster="" width=24.0%>
-        <source src="/PA/img/carouselfb.mp4" type="video/mp4">
+        <source src="/projetoihcacess/img/carouselfb.mp4" type="video/mp4">
         <object>
-          <embed src="/PA/img/carouselfb.mp4" type="application/x-shockwave-flash" allowfullscreen="true" allowscriptaccess="always">  		
+          <embed src="/projetoihcacess/img/carouselfb.mp4" type="application/x-shockwave-flash" allowfullscreen="true" allowscriptaccess="always">  		
        </object>
        Formato não suportado  
       </video>
         <video controls poster="" width=24.0%>
-        <source src="/PA/img/carouselml.mp4" type="video/mp4">
+        <source src="/projetoihcacess/img/carouselml.mp4" type="video/mp4">
         <object>
-          <embed src="/PA/img/carouselml.mp4" type="application/x-shockwave-flash" allowfullscreen="true" allowscriptaccess="always">  		
+          <embed src="/projetoihcacess/img/carouselml.mp4" type="application/x-shockwave-flash" allowfullscreen="true" allowscriptaccess="always">  		
        </object>
        Formato não suportado  
       </video>
       <video controls poster="" width=24.0%>
-        <source src="/PA/img/carouselps.mp4" type="video/mp4">
+        <source src="/projetoihcacess/img/carouselps.mp4" type="video/mp4">
         <object>
-          <embed src="/PA/img/carouselps.mp4" type="application/x-shockwave-flash" allowfullscreen="true" allowscriptaccess="always">  		
+          <embed src="/projetoihcacess/img/carouselps.mp4" type="application/x-shockwave-flash" allowfullscreen="true" allowscriptaccess="always">  		
        </object>
        Formato não suportado  
       </video>
       <video controls poster="" width=24.0%>
-        <source src="/PA/img/carouselspotify.mp4" type="video/mp4">
+        <source src="/projetoihcacess/img/carouselspotify.mp4" type="video/mp4">
         <object>
-          <embed src="/PA/img/carouselspotify.mp4" type="application/x-shockwave-flash" allowfullscreen="true" allowscriptaccess="always">  		
+          <embed src="/projetoihcacess/img/carouselspotify.mp4" type="application/x-shockwave-flash" allowfullscreen="true" allowscriptaccess="always">  		
        </object>
        Formato não suportado  
       </video>
@@ -279,30 +279,30 @@
 
     <div class="col-md-12">
        <video controls poster="" width=24.0%>
-        <source src="/PA/img/pullbrowser.mp4" type="video/mp4">
+        <source src="/projetoihcacess/img/pullbrowser.mp4" type="video/mp4">
         <object>
-          <embed src="/PA/img/pullbrowser.mp4" type="application/x-shockwave-flash" allowfullscreen="true" allowscriptaccess="always">  		
+          <embed src="/projetoihcacess/img/pullbrowser.mp4" type="application/x-shockwave-flash" allowfullscreen="true" allowscriptaccess="always">  		
        </object>
        Formato não suportado  
       </video>
         <video controls poster="" width=24.0%>
-        <source src="/PA/img/pullfb.mp4" type="video/mp4">
+        <source src="/projetoihcacess/img/pullfb.mp4" type="video/mp4">
         <object>
-          <embed src="/PA/img/pullfb.mp4" type="application/x-shockwave-flash" allowfullscreen="true" allowscriptaccess="always">  		
+          <embed src="/projetoihcacess/img/pullfb.mp4" type="application/x-shockwave-flash" allowfullscreen="true" allowscriptaccess="always">  		
        </object>
        Formato não suportado  
       </video>
       <video controls poster="" width=24.0%>
-        <source src="/PA/img/pullgmail.mp4" type="video/mp4">
+        <source src="/projetoihcacess/img/pullgmail.mp4" type="video/mp4">
         <object>
-          <embed src="/PA/img/pullgmail.mp4" type="application/x-shockwave-flash" allowfullscreen="true" allowscriptaccess="always">  		
+          <embed src="/projetoihcacess/img/pullgmail.mp4" type="application/x-shockwave-flash" allowfullscreen="true" allowscriptaccess="always">  		
        </object>
        Formato não suportado  
       </video>
       <video controls poster="" width=24.0%>
-        <source src="/PA/img/pullig.mp4" type="video/mp4">
+        <source src="/projetoihcacess/img/pullig.mp4" type="video/mp4">
         <object>
-          <embed src="/PA/img/pullig.mp4" type="application/x-shockwave-flash" allowfullscreen="true" allowscriptaccess="always">  		
+          <embed src="/projetoihcacess/img/pullig.mp4" type="application/x-shockwave-flash" allowfullscreen="true" allowscriptaccess="always">  		
        </object>
        Formato não suportado  
       </video>
@@ -333,20 +333,20 @@
         </ul>  
       </div>
       <div class="col-md-12">
-        <video controls poster="/PA/img/OneUi.jpg" width=100%>
-        <source src="/PA/img/OneUI.mp4" type="video/mp4">
+        <video controls poster="/projetoihcacess/img/OneUi.jpg" width=100%>
+        <source src="/projetoihcacess/img/OneUI.mp4" type="video/mp4">
         <object>
-          <embed src="/PA/img/OneUI.mp4" type="application/x-shockwave-flash" allowfullscreen="true" allowscriptaccess="always">  		
+          <embed src="/projetoihcacess/img/OneUI.mp4" type="application/x-shockwave-flash" allowfullscreen="true" allowscriptaccess="always">  		
        </object>
        Formato não suportado  
       </video>
       </div>
     </div>
       <div class="col-md-12">
-        <img src="/PA/img/cardconf.png" alt="Exemplo do Padrão de Projeto de Interface Card no aplicativo Configurações em um celular Samsung" width=24.0% height=>
-        <img src="/PA/img/cardmsg.png" alt="Exemplo do Padrão de Projeto de Interface Card no aplicativo Mensagens em um celular Samsung" width=24.0% height=>
-        <img src="/PA/img/cardfb.png" alt="Exemplo do Padrão de Projeto de Interface Card no aplicativo Facebook em um celular Samsung" width=24.0% height=>
-        <img src="/PA/img/cardml.png" alt="Exemplo do Padrão de Projeto de Interface Card no aplicativo MercadoLivre em um celular Samsung" width=24.0% height=>
+        <img src="/projetoihcacess/img/cardconf.png" alt="Exemplo do Padrão de Projeto de Interface Card no aplicativo Configurações em um celular Samsung" width=24.0% height=>
+        <img src="/projetoihcacess/img/cardmsg.png" alt="Exemplo do Padrão de Projeto de Interface Card no aplicativo Mensagens em um celular Samsung" width=24.0% height=>
+        <img src="/projetoihcacess/img/cardfb.png" alt="Exemplo do Padrão de Projeto de Interface Card no aplicativo Facebook em um celular Samsung" width=24.0% height=>
+        <img src="/projetoihcacess/img/cardml.png" alt="Exemplo do Padrão de Projeto de Interface Card no aplicativo MercadoLivre em um celular Samsung" width=24.0% height=>
       </div>
     </div>
 
@@ -358,6 +358,6 @@
   </footer>
 </main>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-      <script>window.jQuery || document.write('<script src="/PA/js/vendor/jquery.slim.min.js"><\/script>')</script>
-      <script src="/PA/js/bootstrap.bundle.min.js"></script>
+      <script>window.jQuery || document.write('<script src="/projetoihcacess/js/vendor/jquery.slim.min.js"><\/script>')</script>
+      <script src="/projetoihcacess/js/bootstrap.bundle.min.js"></script>
 </html>
