Correção de espaçamento de palavras

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
      
         <div class="col-lg-4">
           <h2>Recomendação 4.1</h2>
-          <p><strong>Oferecer contraste mínimo entre plano de fundo e primeiro plano</strong> as cores do plano de fundo e do primeiro plano deverão ser suficientemente contrastantes para que possam ser visualizadas, também, por pessoas com baixa visão, com cromodeficiências ou que utilizam monitores de vídeo monocromático.
+          <p><strong>Oferecer contraste mínimo entre plano de fundo e primeiro plano:</strong> as cores do plano de fundo e do primeiro plano deverão ser suficientemente contrastantes para que possam ser visualizadas, também, por pessoas com baixa visão, com cromodeficiências ou que utilizam monitores de vídeo monocromático.
           Não deverão ser utilizadas imagens atrás do texto (background), pois acabam por dificultar a leitura e desviar a atenção do usuário.</p>
         </div>
       </div>
@@ -208,9 +208,9 @@
     <div class="row featurette">
       <div class="col-md-12" id="carousel">
         <h2 class="featurette-heading">Carousel</h2>
-        <p class="lead"><strong>Descrição:</strong>Uma lista de itens é organizada de maneira horizontal, por meio da qual o usuário pode visualizar e 
+        <p class="lead"><strong>Descrição:</strong> Uma lista de itens é organizada de maneira horizontal, por meio da qual o usuário pode visualizar e 
         navegar pelos itens de maneira fácil e rápida</p>
-        <p class="lead"><strong>Resumo do Problema:</strong>"O usuário precisa navegar por uma lista de itens e possivelmente selecionar um deles"</p>
+        <p class="lead"><strong>Resumo do Problema:</strong> "O usuário precisa navegar por uma lista de itens e possivelmente selecionar um deles"</p>
         <p class="lead"><strong>Recomendações de Uso:</strong></p>
         <li>Use quando você tem uma grande quantidade de itens pra mostrar, mas quer permitir que o usuário se concentre em apenas alguns itens por vez;</li>
         <li>Use quando você quer mostrar ao usuário que existem mais itens disponíveis do que apenas os que estão sendo mostrados atualmente;</li>
@@ -259,8 +259,8 @@
     <div class="row featurette">
       <div class="col-md-12" id="pull">
         <h2 class="featurette-heading">Pull to Refresh</h2>
-        <p class="lead"><strong>Descrição:</strong>O usuário faz um movimento de arrastar com o dedo, de cima para baixo, para atualizar a tela atual;</p>
-        <p class="lead"><strong>Resumo do Problema:</strong>"O usuário quer recuperar mais dados ou atualizar conteúdos já disponíveis na tela";</p>
+        <p class="lead"><strong>Descrição:</strong> O usuário faz um movimento de arrastar com o dedo, de cima para baixo, para atualizar a tela atual;</p>
+        <p class="lead"><strong>Resumo do Problema:</strong> "O usuário quer recuperar mais dados ou atualizar conteúdos já disponíveis na tela";</p>
         <p class="lead"><strong>Recomendações de Uso:</strong></p>
         <ul>
           <li>Usado para atualizar qualquer conteúdo, como listas, listas de grade e coleções de cartões que são classificadas em ordem cronológica reversa;</li>
